add page collection

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -28,3 +28,14 @@ collections:
       - { label: 'Publish Date', name: 'publishDate', widget: 'datetime', required: false }
       - { label: 'Author', name: 'author', widget: 'string' }
       - { label: 'Content', name: 'body', widget: 'markdown' }
+  - name: 'page'
+    label: 'Page'
+    folder: 'src/content/page'
+    create: true
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Cover Image Source', name: 'coverImageSrc', widget: 'image' } # Assuming you use an image widget for cover images
+      - { label: 'Post Title', name: 'postTitle', widget: 'string' }
+      - { label: 'Intro Text', name: 'introText', widget: 'text' } # You can use a text widget for short descriptions
+      - { label: 'Destination Text', name: 'destinationText', widget: 'text' }
+      - { label: 'Content', name: 'body', widget: 'markdown' }
